syntax = "proto3";

option java_package = "grpc.entity.SourceProto";
option java_outer_classname = "SourceProto";


// -------------------------------- API CHANGE ---------------------------------------------
service SourceAggregateService {

  rpc AddMQTTSource(MQTTConfig) returns (GenericResponse) {}
  rpc AddDummySource(DummyConfig) returns (GenericResponse) {}

  rpc RemoveSource(SourceId) returns (GenericResponse) {}

  rpc ShowSourceAggregateState(SourceAggregateId) returns (AggregateState) {}
  rpc ShowSourceAggregateSources(SourceAggregateId) returns (GenericResponse) {} // TODO: To be changed

  rpc ProcessData(Data) returns (GenericResponse) {}

  rpc Passivate(SourceAggregateId) returns (GenericResponse) {}

}



message MQTTConfig {
  string source_id = 1;
  string name = 2;
  string location = 3;
  string broker = 4;
  bool cleanSession = 5;                // default false
  bool autoReconnect = 6;               // default false
  repeated string topics = 7;
  string aggregate_id = 8;                    //set by system
  string ref = 9;
  int32 backpressure = 10;
}


message Data {
  string sourceId = 1;
  string aggregateId = 2;
  string payload = 3;
}

message SourceId {
  string id = 1;
  string aggregate_id = 2;
}

message AggregateSources {
  repeated string sources = 1;
}

message AggregateState {
  repeated string state = 1;
}

message SourceAggregateId {
  string id = 1;
}



message DummyConfig {
  string source_id = 1;
  string aggregate_id = 2;
  int32 start = 3;
  int32 end = 4;
}

message GenericResponse {
  string response = 1;
}




